--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,22 @@
+# Node dependency dir
 node_modules/
-client/node_modules/
-server/node_modules/
+
+# Local env files
+.env
+.env.*
+
+# Build outputs
+dist/
+build/
+
+# Editor folders
+.vscode/
+.idea/
+.DS_Store
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+node_modules/
+node_modules/
